--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <title>Multi-step form | Davi Chechetto</title>
-
 </head>
 
 <body>
@@ -19,7 +18,7 @@
 
     <div class="row aba">
 
-      <div class="col">
+      <div class="col-4 p-0">
         <div class="banner">
           <svg xmlns="http://www.w3.org/2000/svg" width="274" height="568" fill="none" viewBox="0 0 274 568">
             <rect width="274" height="568" fill="#483EFF" rx="10" />
@@ -73,67 +72,71 @@
         </div>
       </div>
 
-      <div class="col p-4 forms">
+      <div class="col-8 p-4 forms">
+        <form>
+          <div id="info" class="">
+            <div class="row">
+              <h2>Personal Info</h2>
+              <p>Please provide your name, and phone number.</p>
+            </div>
 
-        <div id="info" class="">
-          <div class="row">
-            <h2>Personal Info</h2>
-            <p>Please provide your name, and phone number.</p>
-          </div>
-          <div class="row">
-            <label>Name</label>
-            <input type="text" placeholder="e.g. Stephen King">
-          </div>
-          <div class="row">
-            <label>Email Address</label>
-            <input type="text" placeholder="e.g. stephenking@gmail.com">
-          </div>
-          <div class="row">
-            <label>Phone Number</label>
-            <input type="number" placeholder="e.g. +1 (23) 4 5678-9000">
-          </div>
-        </div>
+            <div class="row">
+              <label>Name</label>
+              <input type="text" placeholder="e.g. Stephen King" >required
+            </div>
+            <div class="row">
+              <label>Email Address</label>
+              <input type="email" placeholder="e.g. stephenking@gmail.com" >required
+            </div>
+            <div class="row">
+              <label>Phone Number</label>
+              <input type="tel" id="phone" name="phone"  placeholder="e.g. +1 (23) 4 5678-9000" pattern="\'+'\d{1,2} \(\d{1,2}\) \d{5} \d{4}" title="Não é um número telefonico" >required
+            </div>
 
-        <div id="plans" class="hide">
-          <div class="row">
-            <h2>Select Info</h2>
-            <p>Please provide your name, and phone number.</p>
-          </div>
-          
-
-        </div>
-        <div id="add" class="hide">
-          <div class="row">
-            <h2>Pick Add-ons</h2>
-            <p>Please provide your name, and phone number.</p>
           </div>
 
+          <div id="plans" class="hide">
+            <div class="row">
+              <h2>Select Info</h2>
+              <p>Please provide your name, and phone number.</p>
+            </div>
 
-        </div>
-        <div id="summary" class="hide">
-          <div class="row">
-            <h2>Finishing up</h2>
-            <p>Please provide your name, and phone number.</p>
+
           </div>
-          
+          <div id="add" class="hide">
+            <div class="row">
+              <h2>Pick Add-ons</h2>
+              <p>Please provide your name, and phone number.</p>
+            </div>
 
-        </div>
+
+          </div>
+          <div id="summary" class="hide">
+            <div class="row">
+              <h2>Finishing up</h2>
+              <p>Please provide your name, and phone number.</p>
+            </div>
+
+
+          </div>
 
 
 
-        <div class="botoes">
-          <button type="button" class="botao" id="back">
-            Go Back
-          </button>
-          <button type="button" class="botao" id="next">
-            Next Step
-          </button>
-        </div>
+          <div class="botoes">
+            <button type="button" class="botao" id="back">
+              Go Back
+            </button>
+            <button type="submit" class="botao" id="next">
+              Next Step
+            </button>
+          </div>
+        </form>
       </div>
     </div>
 
 
   </div>
+  
   <script src="script.js"></script>
 
 </body>
