--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
           <div class="botoes">
-            <button type="button" class="botao" id="back">
+            <button type="button" class="botao hide" id="back">
               Go Back
             </button>
             <button type="submit" class="botao" id="next">
@@ -136,7 +136,7 @@
 
 
   </div>
-  
+
   <script src="script.js"></script>
 
 </body>
