--- a/index.html
+++ b/index.html
@@ -75,32 +75,32 @@
       <div class="col-8 p-4">
         <form>
           <div id="info" class="hide">
-            <div class="row">
+            <div class="">
               <h2>Personal Info</h2>
               <p>Please provide your name, and phone number.</p>
             </div>
 
-            <div class="row mb-3">
+            <div class="input mb-3">
               <label>Name</label>
-              <input type="text" placeholder="e.g. Stephen King">required
+              <input type="text" placeholder="e.g. Stephen King"required>
             </div>
-            <div class="row mb-3">
+            <div class="input mb-3">
               <label>Email Address</label>
-              <input type="email" placeholder="e.g. stephenking@gmail.com">required
+              <input type="email" placeholder="e.g. stephenking@gmail.com"required>
             </div>
-            <div class="row mb-3">
+            <div class="input mb-3">
               <label>Phone Number</label>
               <input type="tel" id="phone" name="phone" placeholder="e.g. +1 (23) 4 5678-9000"
-                pattern="\'+'\d{1,2} \(\d{1,2}\) \d{5} \d{4}" title="Não é um número telefonico">required
+                pattern="\'+'\d{1,2} \(\d{1,2}\) \d{5} \d{4}" title="Não é um número telefonico"required>
             </div>
 
           </div>
 
           <div id="plans" class="">
-            <div class="row">
+            <div class="">
               <h2>Select Info</h2>
               <p>Please provide your name, and phone number.</p>
-              <div class="row">
+              <div class="options">
                 <button id="arcade" class="option">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
                     <g fill="none" fill-rule="evenodd">
@@ -109,8 +109,10 @@
                         d="M24.995 18.005h-3.998v5.998h-2v-5.998H15a1 1 0 0 0-1 1V29a1 1 0 0 0 1 1h9.995a1 1 0 0 0 1-1v-9.995a1 1 0 0 0-1-1Zm-5.997 8.996h-2v-1.999h2v2Zm2-11.175a2.999 2.999 0 1 0-2 0v2.18h2v-2.18Z" />
                     </g>
                   </svg>
-                  <h3 class="option-name">Arcade</h3>
-                  <span>$0,00/mo</span>
+                  <div class="option-info">
+                    <h3 class="option-name">Arcade</h3>
+                    <span>$9/mo</span>
+                  </div>
                 </button>
                 <button id="advanced" class="option">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
@@ -120,8 +122,10 @@
                         d="M25.057 15H14.944C12.212 15 10 17.03 10 19.885c0 2.857 2.212 4.936 4.944 4.936h10.113c2.733 0 4.943-2.08 4.943-4.936S27.79 15 25.057 15ZM17.5 20.388c0 .12-.108.237-.234.237h-1.552v1.569c0 .126-.138.217-.259.217H14.5c-.118 0-.213-.086-.213-.203v-1.583h-1.569c-.126 0-.217-.139-.217-.26v-.956c0-.117.086-.213.202-.213h1.584v-1.554c0-.125.082-.231.203-.231h.989c.12 0 .236.108.236.234v1.551h1.555c.125 0 .231.083.231.204v.988Zm5.347.393a.862.862 0 0 1-.869-.855c0-.472.39-.856.869-.856.481 0 .87.384.87.856 0 .471-.389.855-.87.855Zm1.9 1.866a.86.86 0 0 1-.87-.852.86.86 0 0 1 .87-.855c.48 0 .87.38.87.855a.86.86 0 0 1-.87.852Zm0-3.736a.862.862 0 0 1-.87-.854c0-.472.39-.856.87-.856s.87.384.87.856a.862.862 0 0 1-.87.854Zm1.899 1.87a.862.862 0 0 1-.868-.855c0-.472.389-.856.868-.856s.868.384.868.856a.862.862 0 0 1-.868.855Z" />
                     </g>
                   </svg>
-                  <h3 class="option-name">Advanced</h3>
-                  <span>$10,00/mo</span>
+                  <div class="option-info">
+                    <h3 class="option-name">Advanced</h3>
+                    <span>$12/mo</span>
+                  </div>
                 </button>
                 <button id="pro" class="option">
                   <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 40 40">
@@ -131,16 +135,21 @@
                         d="M26.666 13H13.334A3.333 3.333 0 0 0 10 16.333v7.193a3.447 3.447 0 0 0 2.14 3.24c1.238.5 2.656.182 3.56-.8L18.52 23h2.96l2.82 2.966a3.2 3.2 0 0 0 3.56.8 3.447 3.447 0 0 0 2.14-3.24v-7.193A3.333 3.333 0 0 0 26.666 13Zm-9.333 6H16v1.333a.667.667 0 0 1-1.333 0V19h-1.333a.667.667 0 0 1 0-1.334h1.333v-1.333a.667.667 0 1 1 1.333 0v1.333h1.333a.667.667 0 1 1 0 1.334Zm7.333 2a2.667 2.667 0 1 1 0-5.333 2.667 2.667 0 0 1 0 5.333ZM26 18.333a1.333 1.333 0 1 1-2.667 0 1.333 1.333 0 0 1 2.667 0Z" />
                     </g>
                   </svg>
-                  <h3 class="option-name">Pro</h3>
-                  <span>$100,00/mo</span>
+                  <div class="option-info">
+                    <h3 class="option-name">Pro</h3>
+                    <span>$15/mo</span>
+                  </div>
                 </button>
-                <div class="larissar m-4">
-                  <span>Mounthly</span>
-                  <label for="assinatura">Selecione</label>
-                  <input type="checkbox" name="" id="assinatura">
-                  <span>Yearly</span>
-                </div>
               </div>
+              <div class="aba-seletor mt-4">
+                <span id="Mounthly" class="span-selected">Mounthly</span>
+                <div class="seletor">
+                  <input type="checkbox" name="assinatura" id="assinatura">
+                  <label for="assinatura"></label>
+                </div>
+                <span id="Yearly">Yearly</span>
+              </div>
+
 
             </div>
           </div>
