Inicialização do Step 3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
           </div>
 
-          <div id="plans" class="">
+          <div id="plans" class="hide">
             <div class="">
               <h2>Select Info</h2>
               <p>Please provide your name, and phone number.</p>
@@ -111,7 +111,8 @@
                   </svg>
                   <div class="option-info">
                     <h3 class="option-name">Arcade</h3>
-                    <span>$9/mo</span>
+                    <div class="preco">$9/mo</div>
+                    <div class="desconto">2 mounths free</div>
                   </div>
                 </button>
                 <button id="advanced" class="option">
@@ -124,7 +125,8 @@
                   </svg>
                   <div class="option-info">
                     <h3 class="option-name">Advanced</h3>
-                    <span>$12/mo</span>
+                    <div class="preco">$12/mo</div>
+                    <div class="desconto">2 mounths free</div>
                   </div>
                 </button>
                 <button id="pro" class="option">
@@ -137,7 +139,8 @@
                   </svg>
                   <div class="option-info">
                     <h3 class="option-name">Pro</h3>
-                    <span>$15/mo</span>
+                    <div class="preco">$15/mo</div>
+                    <div class="desconto">2 mounths free</div>
                   </div>
                 </button>
               </div>
@@ -153,10 +156,34 @@
 
             </div>
           </div>
-          <div id="add" class="hide">
-            <div class="row">
+          <div id="add" class="">
+            <div>
               <h2>Pick Add-ons</h2>
               <p>Please provide your name, and phone number.</p>
+            </div>
+
+            <div>
+              <div class="checkbox">
+                <input type="checkbox">
+                <div>
+                  <label for="">Online server</label>
+                  <div>Access to multplayer games</div>
+                </div>
+              </div>
+              <div>
+                <input type="checkbox">
+                <div>
+                  <label for="">Larger storage</label>
+                  <div>Extra 1TB of cloud save</div>
+                </div>
+              </div>
+              <div>
+                <input type="checkbox">
+                <div>
+                  <label for="">Customizable profile</label>
+                  <div>Custom theme on your profile</div>
+                </div>
+              </div>
             </div>
 
 
