Modificação no estilo do valor adicional

--- a/index.html
+++ b/index.html
@@ -165,35 +165,45 @@
             <div class="container-add">
 
               <div class="option-checkbox">
-                <input class="inputCheckbox" id="server" type="checkbox">
+                
+                <input class="input-checkbox" id="server" type="checkbox">
                 <label for="server" class="checkbox">
-                  <ion-icon name="checkbox-outline" class="icon-checkbox"></ion-icon>
-                  <div>
-                    <h3>Online server</h3>
-                    <p>Access to multplayer games</p>
+                  <div class="checkbox-aling">
+                    <ion-icon name="checkbox-outline" class="icon-checkbox"></ion-icon>
+                    <div>
+                      <h3>Online server</h3>
+                      <p>Access to multplayer games</p>
+                    </div>
                   </div>
-                </label>
+                    <div>+$2/mo</div>
+                  </label>
               </div>
 
               <div class="option-checkbox">
-                <input class="inputCheckbox" type="checkbox" id="storage">
+                <input class="input-checkbox" type="checkbox" id="storage">
                 <label for="storage" class="checkbox">
-                  <ion-icon name="checkbox-outline" class="icon-checkbox"></ion-icon>
-                  <div>
-                    <h3>Larger storage</h3>
-                    <p>Extra 1TB of cloud save</p>
+                  <div class="checkbox-aling">
+                    <ion-icon name="checkbox-outline" class="icon-checkbox"></ion-icon>
+                    <div>
+                      <h3>Larger storage</h3>
+                      <p>Extra 1TB of cloud save</p>
+                    </div>
                   </div>
+                <div>+$2/mo</div>
                 </label>
               </div>
               
               <div class="option-checkbox">
-                <input class="inputCheckbox" type="checkbox" id="custom">
+                <input class="input-checkbox" type="checkbox" id="custom">
                 <label for="custom" for="customs" class="checkbox">
-                  <ion-icon name="checkbox-outline" class="icon-checkbox"></ion-icon>
-                  <div>
-                    <h3>Customizable profile</h3>
-                    <p>Custom theme on your profile</p>
+                  <div class="checkbox-aling">
+                    <ion-icon name="checkbox-outline" class="icon-checkbox"></ion-icon>
+                    <div>
+                      <h3>Customizable profile</h3>
+                      <p>Custom theme on your profile</p>
+                    </div>
                   </div>
+                  <div class="adicional">+$2/mo</div>
                 </label>
               </div>
 
@@ -210,10 +220,9 @@
           </div>
 
           <div class="botoes">
-            <button type="button" class="botao hide" id="back">
+            <button type="button" class="botao hidden" id="back">
               Go Back
             </button>
-            <div style="color:transparent">.</div>
             <button type="submit" class="botao" id="next">
               Next Step
             </button>
