estilizando icone de checkbox

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="container-add">
 
               <div class="option-checkbox">
-                
+
                 <input class="input-checkbox" id="server" type="checkbox">
                 <label for="server" class="checkbox">
                   <div class="checkbox-aling">
@@ -175,8 +175,8 @@
                       <p>Access to multplayer games</p>
                     </div>
                   </div>
-                    <div>+$2/mo</div>
-                  </label>
+                  <div>+$2/mo</div>
+                </label>
               </div>
 
               <div class="option-checkbox">
@@ -189,15 +189,19 @@
                       <p>Extra 1TB of cloud save</p>
                     </div>
                   </div>
-                <div>+$2/mo</div>
+                  <div>+$2/mo</div>
                 </label>
               </div>
-              
+
               <div class="option-checkbox">
                 <input class="input-checkbox" type="checkbox" id="custom">
                 <label for="custom" for="customs" class="checkbox">
                   <div class="checkbox-aling">
-                    <ion-icon name="checkbox-outline" class="icon-checkbox"></ion-icon>
+                    <div class="icon-checkbox">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="12" height="9" viewBox="0 0 12 9">
+                        <path fill="none" stroke="#FFF" stroke-width="2" d="m1 4 3.433 3.433L10.866 1" />
+                      </svg>
+                    </div>
                     <div>
                       <h3>Customizable profile</h3>
                       <p>Custom theme on your profile</p>
@@ -208,6 +212,7 @@
               </div>
 
             </div>
+
 
           </div>
           <div id="summary" class="hide">
